<resources>
    <string name="app_name">TennisTracker</string>
    <string name="nouveau_match">Nouveau Match</string>
    <string name="historique">Historique</string>
    <string name="langues">Langues</string>
    <string name="chooseLangTitle">Choisissez une langue</string>
    <string name="frLang">Français</string>
    <string name="enLang">Anglais</string>

    <string name="player_1_txtView">Club 1</string>
    <string name="player_2_txtView">Club 2</string>
    <string name="player_1_editTxt">Club 1</string>
    <string name="player_2_editTxt">Club 2</string>
    <string name="dialog_serve_player">Quel club doit commencer ?</string>
    <string name="dialog_faute">Quel est le type de faute ?</string>
    <string name="dialog_tir">Quel est le type du tir ?</string>
    <string name="dialog_cancel_match">Vous êtes sûr d\'annuler ?</string>
    <string name="yes_txt_btn">Oui</string>
    <string name="no_txt_btn">Non</string>
    <string name="btn_demarrerTxt">Démarrer</string>
    <string name="mode_suivi_txtView">Lieu du Match</string>
    <string name="format_du_match_txtView">Format du Match</string>
    <string name="format_du_dernier_set_txtView">Format du Dernier Set</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="apercu">Aperçu</string>
    <string name="telecharger">Télécharger</string>
    <string name="txtUploadInProgress">Téléchargement en cours…</string>
    <string name="txtUploadSuccesful">Téléchargé</string>
    <string name="txtUploadFailed">Téléchargement echoué</string>
    <string name="txtDownloadImg">Voulez-vous télécharger cette image ?</string>
    <string name="txtImageSaved">Image sauvegardée</string>
    <string name="google_map_key">AIzaSyDG7SDsyGQz3u7smTF1vFqG-skAmu3m2Rg</string>
    <string name="localisez_les_stades_pr_s_de_chez_vous">Localisez les stades près de chez vous</string>
    <string name="localisation">Localisation</string>
    <string name="photos">Photos</string>
    <string name="tir">Tir</string>
    <string name="passe">Passe</string>
    <string name="but">But</string>
    <string name="faute">Faute</string>
    <string name="hors_jeu">Hors-jeu</string>
    <string name="cartons_jaunes">Cartons jaunes</string>
    <string name="cartons_rouges">Cartons rouges</string>
    <string name="tirCadre">Tir Cadré</string>
    <string name="pick_stadium">Voulez-vous sélectionner ce stade ?</string>
    <string name="please_pick_stadium">Veuillez choisir un stade</string>
    <string name="marker_me">Moi</string>
    <string name="game_over">Match terminé</string>
    <string name="near_you">Autour de vous</string>
</resources>