<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearImg"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearImg"
        android:padding="10dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/btnNewMatch"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/nouveau_match" />

        <Button
            android:id="@+id/btnHistoric"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_corners"
            android:text="@string/historique" />

        <Button
            android:id="@+id/btnLang"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/langues" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>